# l2dlive

./: .gitignore  gemini_client.py  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tmp.sh  tsconfig.tsbuildinfo  vite.config.ts
public/ANIYA/: ANIYA.model3.json
public/ANIYA/expressions/: 0.exp3.json  1.exp3.json  2.exp3.json  3.exp3.json  4.exp3.json  5.exp3.json  6.exp3.json  7.exp3.json  8.exp3.json  9.exp3.json  Q.exp3.json  W.exp3.json  t.exp3.json  u.exp3.json  y.exp3.json
src/: App.tsx  main.tsx
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/components/: caption.tsx  iconButton.tsx  live2DViewer.tsx  micInput.tsx  preLoader.tsx  ui.tsx
src/components/live2D/: Live2DViewer.tsx  live2DViewer.tsx
src/components/menu/: InstructionEditor.tsx  Menu.tsx  apiKeyInput.tsx  inputOption.tsx  menu.tsx  menuContainer.tsx  menuHead.tsx  slideOption.tsx
src/components/ui/: Caption.tsx  MicInput.tsx  micInput.tsx  ui.tsx
src/constants/: prompts.ts
src/contexts/: liveApiContext.tsx  modelContext.tsx  sessionContext.tsx  settingContext.tsx
src/hooks/: speechRecognition.ts  useAudioRecorder.ts  useAudioStreamer.ts  useAutoReconnectWebSocket.ts  useChatResponse.ts  useGeminiLiveApi.ts  useLiveApi.ts  useSpeechRecognition.ts
src/lib/: audio-recorder.ts  audio-streamer.ts  audioworklet-registry.ts  multimodal-live-client.ts  multimodal-live-types.ts  utils.ts
src/styles/: globals.css
src/utils/: logger.ts
